bonus/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
spec:
  rules:
  - http:
      paths:
      - path: /gitlab
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8080
      - path: /argocd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 8080
